[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/looser_scene.gd" type="Script" id=1]
[ext_resource path="res://images/wb.background.png" type="Texture" id=2]
[ext_resource path="res://objects/background/stars.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/Comfortaa-Light.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://objects/skinButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/dailyBonusButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/playButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/challenges.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=5]

resource_name = "show"
length = 0.5
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OOPS:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.26 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 110, 108 ), Vector2( 98, 113 ), Vector2( 107, 102 ), Vector2( 127, 113 ), Vector2( 117, 111 ), Vector2( 121, 118 ) ]
}

[sub_resource type="Animation" id=6]

resource_name = "press"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Node2D3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.52251 ) ]
}

[node name="looser" type="Node2D"]

script = ExtResource( 1 )

[node name="wb.background" type="Sprite" parent="." index="0"]

position = Vector2( 322.161, 657.494 )
scale = Vector2( 1.08311, 1.15872 )
texture = ExtResource( 2 )

[node name="stars" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( -29.9449, -0.62241 )

[node name="OTHER" type="Label" parent="." index="2"]

modulate = Color( 1, 1, 1, 0.509804 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 185.0
margin_right = 581.0
margin_bottom = 362.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "AFTER THAT, NOBODY HAS SEEN YOUR BALLON"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="OOPS" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 108.0
margin_right = 513.0
margin_bottom = 221.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "OOPS..."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="SCORE" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 359.0
margin_right = 635.0
margin_bottom = 427.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "SCORE: 0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="BEST" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 424.0
margin_right = 641.0
margin_bottom = 459.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "BEST: 0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Node2D" parent="." index="6" instance=ExtResource( 6 )]

position = Vector2( 824.25, 541.918 )

[node name="Node2D2" parent="." index="7" instance=ExtResource( 7 )]

position = Vector2( 79.4089, 590.231 )

[node name="Node2D3" parent="." index="8" instance=ExtResource( 8 )]

position = Vector2( 178.63, 769.896 )
_sections_unfolded = [ "Visibility" ]

[node name="ColorRect" type="ColorRect" parent="." index="9"]

self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -8.0
margin_top = -28.0
margin_right = 658.0
margin_bottom = 1136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="wb.background" type="Sprite" parent="ColorRect" index="0"]

position = Vector2( 329.219, 764.67 )
scale = Vector2( 1.03433, 1.32328 )
texture = ExtResource( 2 )

[node name="animation" type="AnimationPlayer" parent="." index="10"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/show = SubResource( 5 )
blend_times = [  ]

[node name="TouchScreenButton" type="TouchScreenButton" parent="." index="11"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( 190.877, 781.959 )
scale = Vector2( 1.54606, 1.52562 )
normal = ExtResource( 9 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="anim" type="AnimationPlayer" parent="TouchScreenButton" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/press = SubResource( 6 )
blend_times = [  ]

[node name="Button" type="Button" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -226.0
margin_top = 92.0
margin_right = -36.0
margin_bottom = 176.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "-100 daily"
flat = false
align = 1

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]

[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]


